@@ -7947,6 +7947,19 @@ e: Examine  !: Apply  .: Next  ,: Previous</screen>
 	    </varlistentry>
 
 	    <varlistentry>
+	      <term><literal>installsizechange</literal></term>
+
+	      <listitem>
+		<para>
+		  Sorts packages by the change in the installed size (estimated
+		  amount of size required when installed), comparing the current
+		  version (if installed) and the candidate version to be
+		  installed, upgraded or removed.
+		</para>
+	      </listitem>
+	    </varlistentry>
+
+	    <varlistentry>
 	      <term><literal>debsize</literal></term>
 
 	      <listitem>
