@@ -2,6 +2,9 @@
 
 - New features:
 
+  * New sort policy 'installsizechange', for sorting by change in installed size
+    of each package when the desired actions are applied (Closes: #676075)
+
 - Bug fixes:
 
   * Fix segfault and show the correct changelog when executing "aptitude
